# WUT-UXP1A-PROJECT-Bash

./: CMakeLists.txt  README.md  main.cpp
flex/: shell.lex
include/: errors.hpp  grammar.hpp  hello.hpp  interface.hpp  interpretation.hpp  parser.hpp  program.hpp  utils.hpp
lib/: CMakeLists.txt
source/: errors.cpp  grammar.cpp  hello.cpp  interface.cpp  interpreter.cpp  lex.yy.c  parser.cpp  program.cpp  shell.lex  utils.cpp
tests/: test_program.cpp  test_shell.cpp
